--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -2,9 +2,17 @@ body {
   font-family: Helvetica;
 }
 
-#root {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+
+.flat-list {
+ display: flex;
+ flex-wrap: wrap;
 }
+
+.flat {
+ flex: 50% 0 0;
+ cursor: pointer;
+ border: 6px solid transparent;
+}
+
+@import "card";
